# mintext

./: .gitignore  README.md  progress.md  pyproject.toml
benchmarks/: benchmark_moe_e2e.py  benchmark_moe_kernels.py  run_benchmark.py  run_comparison.sh
configs/: base.yml
configs/benchmarks/: llama-3.2-1b-v6e-8.yml  llama-3.2-3b-v6e-8.yml  qwen3-4b-v6e-8.yml
configs/models/: deepseek-v3.yml  gemma-3-4b.yml  meta-llama-3-8b.yml  meta-llama-3.2-1b.yml  qwen3-8b.yml  qwen3-next-80b-a3b.yml  test-tiny.yml
mintext/: __init__.py  config.py  train.py  trainer.py
mintext/checkpoint/: conversion.py  manager.py
mintext/data/: __init__.py  dataset.py  indexed_dataset.py  pipeline.py  tokenizer.py
mintext/distributed/: __init__.py  mesh.py  partition.py  sharding.py
mintext/kernels/: __init__.py  autotuner.py  grouped_matmul.py  moe_dispatch.py
mintext/models/: __init__.py  base.py  deepseek_v3.py  gemma3.py  llama3.py  qwen3.py  qwen3_next.py
mintext/modules/: __init__.py  attention.py  linear.py  linear_attention.py  mla.py  moe.py  norm.py  rope.py
mintext/optim/: __init__.py  grad_accumulation.py  optimizer.py
mintext/utils/: filesize.py  logging.py  profiling.py  pytree.py  xla_flags.py
scripts/: benchmark_llama_1b.sh  run_tpu_benchmark.sh  setup_gpu.sh  setup_tpu.sh  slurm_launch.sh  sync_tpu.sh
tests/: conftest.py  test_checkpoint.py  test_config.py  test_data.py  test_logging.py  test_model.py  test_moe_kernels.py  test_sharding.py  test_train_step.py
tools/: generate_sample_jsonl.py  mmap_to_arecord.py  split_mmap.py  text_to_arecord.py
